v3.6.14 (XXXX-XX-XX)
--------------------

* Fixed BTS-360 and ES-826: sporadic ArangoSearch error `Invalid RL encoding in
  'dense_fixed_offset_column_key'`.

* Fixed a problem in document batch operations, where errors from one shard were
  reported multiple times, if the shard is completely off line.

* Adjust help text of arangoimport's `--convert` option to actual behavior.
  Unquoted null, false and true literals are always converted.

* Added error handling for figures command in cluster. Previously errors
  returned by shards were ignored when aggregating the individual responses.

* Change metrics' internal `low()` and `high()` methods so that they return by
  value, not by reference.

* When using connections to multiple endpoints and switching between them,
  arangosh can now reuse existing connections by referring to an internal
  connection cache. This helps for arangosh scripts that repeatedly connect to
  multiple endpoints, and avoids wasting lots of ephemeral TCP ports remaining
  in CLOSE_WAIT state.
  This change is transparent to any arangosh scripts or commands that do not
  reconnect to other endpoints than the one specified at arangosh start.

* Put Sync/LatestID into hotbackup and restore it on hotbackup restore if it is
  in the backup. This helps with unique key generation after a hotbackup is
  restored to a young cluster.

* Reasonably harden MoveShard against unexpected VelocyPack input.

* Follower primaries respond with
  TRI_ERROR_CLUSTER_SHARD_FOLLOWER_REFUSES_OPERATION to any read request. Fixes
  a wrongly responded 404 from chaos tests.

* Fixed a bug in the web interface that displayed the error "Not authorized to
  execute this request" when trying to create an index in the web interface in a
  database other than `_system` with a user that does not have any access
  permissions for the `_system` database.
  The error message previously displayed error actually came from an internal